test/impure-from-pure.err.expect
test/impure-from-pure.ktn:1:1: type error: declared type (Int -> Int) does not match inferred type (Int => Int) of impureFromPure
