test/impure-from-pure.ktn
def impureFromPure (Int -> Int):
  "Impure!" say
  ++

5 impureFromPure sayi
